# pissir

./: .gitignore  build.sh  dump_rsa.sql  mosquitto.conf  pissir.sln
test/: Dockerfile  main.py  manager.sh  pyproject.toml  requirements.txt
test/auth/__tests__/: clear.sql
test/auth/__tests__/signup/: setup.sql  (+1 more)
test/cicd_test_suite/: __init__.py  main.py
test/cicd_test_suite/builder/: main.py
test/cicd_test_suite/config/: address_manager.py  api_database_server.py  api_server.py  auth_server.py  frontend_server.py  proxy_server.py
test/cicd_test_suite/custom_env/: main.py
test/cicd_test_suite/fake/: token.py
test/cicd_test_suite/image/: api_database.py  api_server.py  auth_database.py  auth_server.py  frontend.py  mosquitto_server.py  oauth_server.py  proxy_server.py
test/cicd_test_suite/integration/: main.py
test/cicd_test_suite/live_demo/: main.py  prepopulate.py
test/cicd_test_suite/network/: network.py
test/cicd_test_suite/runner/: __init__.py
test/cicd_test_suite/utility/: __init__.py  assertion.py  color_print.py  custom_date.py  docker_lib.py  encode.py  env.py  jsonwebtoken.py  state.py  ulid.py
test/config/: __init__.py  address_manager.py  api_database_server.py  api_server.py  auth_database_server.py  auth_server.py  mosquitto_server.py  oauth_server.py  proxy_server.py
test/image/: api_database.py  api_server.py  auth_database.py  auth_server.py  frontend.py  mosquitto_server.py  oauth_server.py  proxy_server.py
test/src/: main.py
test/src/utility/: __init__.py  color_print.py
test/utility/: __init__.py  test_lib.py
(+331 files in other folders)
